--- a/frontend/login.css
+++ b/frontend/login.css
@@ -15,7 +15,7 @@ section
     min-height: 100vh;
     width: 100%;
   
-    background: url('loginpic.jpg')no-repeat;
+    background: url('log.jpg')no-repeat;
     background-position: center;
     background-size: cover;
 }
@@ -149,7 +149,7 @@ button
 
 }
 
-.register p a :hover
+.register p a:hover
 {
     text-decoration: underline;
 }
