--- a/views/userNotDonorHpage.ejs
+++ b/views/userNotDonorHpage.ejs
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
-    <link rel="stylesheet" href="userhomepage.css">
+    <link rel="stylesheet" href="userNotDonorHpage.css">
 </head>
 <body>
 
@@ -23,18 +25,8 @@
             </span></a></li> 
            </ul>
            <ul>
-            <li><a href=""><span class="las la-bell">
-             <span>Pending Requests</span>
-            </span></a></li> 
-           </ul>
-           <ul>
-            <li><a href=""><span class="las la-file-medical-alt">
-             <span>Donation History</span>
-            </span></a></li> 
-           </ul>
-           <ul>
-            <li><a href=""><span class="las la-tint">
-             <span>Donate Blood</span>
+            <li><a href="#"><span class="las la-tint">
+             <span>Become A Donor!</span>
             </span></a></li> 
            </ul>
            <ul>
