frontend almost sorted

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h1><%= message %></h1>
-    <a href="/practice.html">Go to this page</a>
-    <br>
-    <a href="/userLogin.html">Login</a>
+    <!-- <div class="class">Search donor Info</div>
+    <a href="/practice.html">Go to this page</a> -->
+    <div class="login"><a href="/userLogin.html">Login</a></div>
+      <div class="signup"> <a href="/userSignup2.html">Don't have and acoount? Sign up</a></div>
+   
+
 </body>
 </html>
 
