--- a/views/userNotDonorHpage.ejs
+++ b/views/userNotDonorHpage.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
-    <link rel="stylesheet" href="userNotDonorHpage.css">
+    <link rel="stylesheet" type="text/css" href="userNotDonorHpage.css">
+
 </head>
 <body>
 
@@ -50,7 +49,7 @@
             <div class="user-wrapper">
                 <img src="/img.jpg" width="30 px" height="30px" alt="">
                 <div>
-                    <h4>Navin Nawar</h4>
+                    <h4><%=name %></h4>
                 </div>
             </div>
         </header>
