donor signup page implemented only

--- a/views/userNotDonorHpage.ejs
+++ b/views/userNotDonorHpage.ejs
@@ -24,9 +24,10 @@
             </span></a></li> 
            </ul>
            <ul>
-            <li><a href="#"><span class="las la-tint">
-             <span>Become A Donor!</span>
-            </span></a></li> 
+            <li><a href="/donorSignup?userid=<%= encodeURIComponent(userid) %>"><span class="las la-tint">
+                <span>Become A Donor!</span>
+            </span></a></li>
+            
            </ul>
            <ul>
             <li><a href=""><span class="las la-handshake">
