Donor Signup Done

--- a/views/donorSignup.ejs
+++ b/views/donorSignup.ejs
@@ -78,8 +78,8 @@
             <label for="userid">User ID:</label>
             <input type="text" id="userid" name="userid" value="<%= userid %>" required>
 
-            <label for="dateOfBirth">Date of Birth (YYYY-MM-DD):</label>
-             <input type="text" id="dateOfBirth" name="dateOfBirth" pattern="\d{4}-\d{2}-\d{2}" required>
+            <label for="dateOfBirth">Date of Birth:</label>
+        <input type="date" id="dateOfBirth" name="dateOfBirth" required>
 
             <label for="gender">Gender:</label>
             <select id="gender" name="gender" required>
