bank based on district shown done

--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -33,7 +33,7 @@
             </span></a></li> 
            </ul>
            <ul>
-            <li><a href=""><span class="las la-tint">
+            <li><a href="/bloodRequest?userid=<%= encodeURIComponent(userid) %>"><span class="las la-tint">
              <span>Donate Blood</span>
             </span></a></li> 
            </ul>
@@ -58,7 +58,7 @@
             <div class="user-wrapper">
                 <img src="/img.jpg" width="30 px" height="30px" alt="">
                 <div>
-                    <h4><%=name %></h4>
+                    <h4><%=userid %></h4>
                 </div>
             </div>
         </header>
