--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,10 @@
 </head>
 <body>
     <h1><%= message %></h1>
-    <!-- <div class="class">Search donor Info</div>
-    <a href="/practice.html">Go to this page</a> -->
     <div class="login"><a href="/userLogin.html">Login</a></div>
-      <div class="signup"> <a href="/userSignup2.html">Don't have and acoount? Sign up</a></div>
-   
+    <div class="signup"><a href="/userSignup2.html">Don't have and acoount? Sign up</a></div>
+    <div class="bankLogin"><a href="/htmlPages/bankLogin.html">Bank Login</a></div>    
+    <div class="BankSignup"><a href="/htmlPages/bankSignup.html">Bank signup</a></div>
 
 </body>
 </html>
-
