done area based showing

--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -58,7 +58,7 @@
             <div class="user-wrapper">
                 <img src="/img.jpg" width="30 px" height="30px" alt="">
                 <div>
-                    <h4><%=userid %></h4>
+                    <h4><%=name %></h4>
                 </div>
             </div>
         </header>
