bank-donor appointment donor part done

--- a/views/donorSignup.ejs
+++ b/views/donorSignup.ejs
@@ -73,7 +73,8 @@
         
         <h2>Donor Signup</h2>
 
-        <form action="/userHomePage/donorSignup" method="post">
+        <form action="">
+            
 
             <label for="userid">User ID:</label>
             <input type="text" id="userid" name="userid" value="<%= userid %>" required>
@@ -119,3 +120,4 @@
 
 </body>
 </html>
+<!-- //"/userHomePage/donorSignup" method="post" -->
