--- a/views/bloodRequest.ejs
+++ b/views/bloodRequest.ejs
@@ -119,7 +119,8 @@
 }
 
 .blood-bank-card {
-    background: linear-gradient(to left, #4e4e4c 0%, #ffffff 70%); /* Improved gradient effect */
+    /* background: linear-gradient(to left, #4e4e4c 0%, #ffffff 100%);  */
+    background: #ffffff; 
     color: #333;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -243,6 +244,7 @@
         </div>
     </div>
  -->
+ 
 
 </body>
 </html>
