--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1><%= message %></h1>
-    <div class="login"><a href="/userLogin.html">Login</a></div>
-    <div class="signup"><a href="/userSignup2.html">Don't have and acoount? Sign up</a></div>
+    <div class="login"><a href="/htmlPages/userLogin.html">Login</a></div>
+    <div class="signup"><a href="/htmlPages/userSignup2.html">Don't have and acoount? Sign up</a></div>
     <div class="bankLogin"><a href="/htmlPages/bankLogin.html">Bank Login</a></div>    
     <div class="BankSignup"><a href="/htmlPages/bankSignup.html">Bank signup</a></div>
 
