--- a/views/donorSignup.ejs
+++ b/views/donorSignup.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donor Signup</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="userNotDonorHpage.css">
+    <link rel="stylesheet" type="text/css" href="ejsPages/css/userNotDonorHpage.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
             background-color: #45a049;
         }
     </style>
-    <script type="text/javascript" src="/js/donorSignup.js" defer></script>
+    <script type="text/javascript" src="/ejsPages/js/donorSignup.js" defer></script>
 </head>
 <body>
 
