--- a/views/donationForm.ejs
+++ b/views/donationForm.ejs
@@ -103,7 +103,7 @@
         const requestid='<%= requestid %>';
         console.log(userid);
     </script>
-     <script type="text/javascript" src="/js/donationForm.js" defer></script>
+     <script type="text/javascript" src="/ejsPages/js/donationForm.js" defer></script>
 </head>
 <body>
     <div class="navbar">
