--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="ejsPages/css/responsive.css">
 
     <!-- ===== ===== Remix Font Icons Cdn ===== ===== -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="fonts/remixicon.css">
     <script>
         const userid = '<%= userid %>';
@@ -168,7 +169,54 @@
             </div>
         </section>
     </div>
+     
 
+    <!-- //update option -->
+    <div class="overlay"></div> <!-- Overlay div for background blur -->
+      
+    <div class="userDetail card"  style="display: none;">
+       
+    
+        <div class="updateProfileForm" style="display: none; align-items: center; justify-content: center;">
+            <h1 class="heading" style="color: #550011;">Update Profile</h1>
+            <form id="profileForm">
+                <label for="name" style="color: #550011;">Name:</label><br>
+                <input type="text" id="name" name="name"><br>
+    
+                <label for="phone" style="color: #550011;">Phone:</label><br>
+                <input type="tel" id="phone" name="phone"><br>
+    
+                <label for="area" style="color: #550011;">Area:</label><br>
+                <input type="text" id="area" name="area"><br>
+    
+                <label for="district" style="color: #550011;">District:</label><br>
+                <input type="text" id="district" name="district"><br>
+    
+                <label for="password" style="color: #550011;">Password:</label><br>
+                <div style="position: relative;">
+                    <input type="password" id="password" name="password">
+                    <i class="far fa-eye" id="togglePassword" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                </div>
+    
+                <label for="email" style="color: #550011;">Email:</label><br>
+                <input type="email" id="email" name="email"><br>
+    
+                <label for="gender" style="color: #550011;">Gender:</label><br>
+                <input type="text" id="gender" name="gender"><br>
+    
+                <label for="bloodGroup" style="color: #550011;">Blood Group:</label><br>
+                <input type="text" id="bloodGroup" name="bloodGroup"><br>
+    
+                <label for="rh" style="color: #550011;">Rh:</label><br>
+                <input type="text" id="rh" name="rh"><br>
+    
+                <input type="submit" value="Submit" style="background-color: #550011; color: white;">
+            </form>
+            <button id="cancelUpdate" style="background-color: #550011; color: white;">Cancel</button>
+
+        </div>
+    </div>
+    
 </body>
 
 </html>
