--- a/views/bloodRequest.ejs
+++ b/views/bloodRequest.ejs
@@ -174,9 +174,9 @@
 <body>
     <div class="search-bar">
         <i class="fas fa-search"></i>
-        <input type="text" placeholder="Search Blood Banks">
-        <button>Search</button>
+        <input type="text" id="searchInput" placeholder="Search Districts For Available Blood Banks ">
     </div>
+   
     <!-- <div class="container">
     <div class="blood-donation-info">
         <h2>Why Donate Blood?</h2>
