--- a/frontendPages/htmlPages/css/bankHome.css
+++ b/frontendPages/htmlPages/css/bankHome.css
@@ -21,7 +21,7 @@ body {
     justify-content: space-between; /* Add space between header items */
     padding: 20px;
     color: black;
-    height: 70px;
+    height: 30px;
 }
 
 .header-title {
@@ -55,6 +55,8 @@ body {
     display: flex;
     position: relative;
     /* flex-direction: column; */
+    height: 100%;
+    flex-direction: row;
 }
 
 /*/////////////////////////////////////////sidebar///////////////////////////////////////////*/
@@ -97,23 +99,210 @@ body {
     margin-right: 20px;
     padding: 20px;
     border-radius: 10px; /* Add border-radius for a smoother appearance */
-    /* margin-left: 250px; 
-    padding: 20px;
-    background-color: #f0f0f0;
-    height: 100%; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
+/* initial cards of home page*/
+.cardsDiv{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.scheduledDonorAppointmentsCard{
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+    flex: 1;
+}
+
+.scheduledDonorAppointmentsCard:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    background-color: rgb(185, 79, 79);
+}
+
+.cardHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.cardBody{
+    margin-top: 20px;
+}
+
+.scheduledUserAppointmentsCard{
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+    flex : 1;
+}
+.scheduledUserAppointmentsCard:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    background-color: rgb(185, 79, 79);
+}
+/*donor appointments page*/
+/* Style for the appointment div */
+
+
+.scheduledDonorAppointmentsDiv{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+    align-items: center;
+    width: 100%;
+    flex: 1;
+}
+
+
+.appointmentAndAdditionalDiv{
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+.appointmentAndAdditionalDiv:hover {
+    box-shadow: 0px 4px 10px rgba(59, 120, 194, 0.2);
+}
+
+.appointmentAndAdditionalDiv.hovered {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.appointmentDiv {
+    flex:1;
+    /* background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Style for the appointment details */
+.appointmentDetails {
+    margin-bottom: 10px;
+}
+
+/* Style for the buttons */
+.buttonContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.acceptButton, .reportButton {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.acceptButton {
+    background-color: #5cb85c;
+    color: white;
+}
+
+.acceptButton:hover {
+    background-color: #4cae4c;
+}
+
+.reportButton {
+    background-color: #d9534f;
+    color: white;
+}
+
+.reportButton:hover {
+    background-color: #c9302c;
+}
+
+.approveDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.reportDiv {
+    padding: 20px;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.reportLabel {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.diseaseCheckboxLabel {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.diseaseCheckbox {
+    margin-right: 5px;
+}
+
+.reportInput {
+    margin-top: 5px;
+}
+
+.submitButton {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.submitButton:hover {
+    background-color: #45a049;
+}
+
+.submitButton:active {
+    background-color: #3e8e41;
+}
+
+
+
+/* show donor requests div  */
 .donorRequestDiv{
     padding: 20px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
     margin-bottom: 50px;
 
 }
 
-/* Style for the header */
 .headerDiv {
     padding: 20px;
     background-color: #2c6f17;
@@ -123,7 +312,6 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Style for the table container */
 .tableDiv {
     margin-top: 20px;
     padding: 20px;
@@ -132,7 +320,7 @@ body {
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
 }
 
-/* Style for the table */
+
 .donorRequestsTable {
     width: 100%;
     border-collapse: collapse; /* Collapse border spacing */
@@ -248,9 +436,6 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
 }
-
-
-
 
 
 /*/////////////////////////////////////////right sidebar///////////////////////////////////////////*/
