--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
     <link rel="stylesheet" href="ejsPages/css/userhomepage.css">
+    <script>
+        const userid = '<%= userid %>';
+    </script>
+    <script type="text/javascript" src="/ejsPages/js/userDonorHomepage.js" defer></script>
 </head>
 <body>
 
@@ -144,8 +148,8 @@
                 </div>
                     </div>
                 </div>
-                <div class="card-wrapper">
-                    <!-- Smaller part content (single card) -->
+                <!-- <div class="card-wrapper">
+                   
                     <div class="card">
                         <div class="card-header">
                             <h2>Bank Name</h2>
@@ -156,7 +160,22 @@
                             <p><strong>Donation Time:</strong> 10:00 AM</p>
                         </div>
                     </div>
+                </div> -->
+
+                <div class="card-wrapper">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 id="bankName">Bank Name</h2>
+                            <span class="status" id="status">Status</span>
+                        </div>
+                        <div class="card-body">
+                            <p><strong>Donation Date:</strong> <span id="appointmentDate">January 1, 2024</span></p>
+                            <p><strong>Donation Time:</strong> <span id="appointmentTime">10:00 AM</span></p>
+                        </div>
+                    </div>
                 </div>
+                
+               
             </div>
         </div>
         <script>
