--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -161,7 +161,8 @@
                         </div>
                     </div>
                 </div> -->
-
+                
+                    <!-- Second set of cards -->
                 <div class="card-wrapper">
                     <div class="card">
                         <div class="card-header">
@@ -173,7 +174,9 @@
                             <p><strong>Donation Time:</strong> <span id="appointmentTime">10:00 AM</span></p>
                         </div>
                     </div>
+                    
                 </div>
+               
                 
                
             </div>
