--- a/frontendPages/htmlPages/css/bankHome.css
+++ b/frontendPages/htmlPages/css/bankHome.css
@@ -11,42 +11,50 @@ body {
     display: flex;
     flex-direction: row;
     height: 100vh;
+    user-select: none;
 }
 
 /*//////////////////////////////////////////////////////////header//////////////////////////////////////////////////////*/
 
 .header {
     display: flex;
-    align-items: center; /* Align items vertically in the header */
-    justify-content: space-between; /* Add space between header items */
+    align-items: center; 
+    justify-content: space-between;
     padding: 20px;
-    color: black;
+    color: rgb(255, 255, 255);
     height: 30px;
+    user-select: none;
+    background-color: rgb(106, 23, 23);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 .header-title {
-    font-size: 24px; /* Increase font size for better readability */
+    font-size: 24px; 
     font-weight: bold;
-    color: #2c6f17;
+    color: #ffffff;
     text-decoration: none;
-    cursor: pointer;
-    transition: color 0.3s; /* Add transition for smoother hover effect */
+    cursor: not-allowed;
+    transition: color 0.3s;
 }
 
 .header-menu {
     display: flex;
-    align-items: center; /* Align items vertically in the header menu */
+    align-items: center; 
 }
 
 .notification-div {
-    margin-right: 20px; /* Add margin to separate notification from logout */
+    margin-right: 20px; 
 }
 
 .header-menu-item {
     color: #2c6f17;
     text-decoration: none;
     cursor: pointer;
-    transition: color 0.3s; /* Add transition for smoother hover effect */
+    transition: color 0.3s;
 }
 
 /*//////////////////////////////////////////////////////main body//////////////////////////////////////////////////////*/
@@ -54,38 +62,49 @@ body {
 .main-body {
     display: flex;
     position: relative;
-    /* flex-direction: column; */
     height: 100%;
     flex-direction: row;
 }
 
 /*/////////////////////////////////////////sidebar///////////////////////////////////////////*/
 .sidebar {
-    flex:1  ;
-    padding: 20px;
-    margin-right: 20px;
-    border-radius: 10px; /* Add border-radius for a smoother appearance */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
+    margin-right: 10px;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  */
     display: flex;
     flex-direction: column;
-    height: 20%;
+    height: 100vh;
+    user-select: none;
+    position: fixed;
+    overflow-y: auto;
+    background-color: rgb(28, 24, 24);
 }
 
+.list-group{
+    height: 100%;
+    margin-top: 10px;
+    margin-right: 0; /* Remove margin to prevent white lines */
+    padding-right: 0; /* Remove padding to prevent white lines */
+    border-right: 0; /* Remove border to prevent white lines */
+}
 
-/* Add spacing between list group items */
 .list-group-item {
-    color: rgb(9, 8, 8);
-    transition: background-color 0.3s, color 0.3s;
+    color: rgb(215, 209, 209);
+    /* transition: background-color 0.3s, color 0.3s; */
+    font: 1em sans-serif;
+    font-size: small;
     cursor: pointer;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Add border bottom */
+    border-bottom: 1px solid rgb(210, 199, 199); 
+    height: 35px;
+    background-color: rgb(28, 24, 24);
 }
 
-/* Remove border bottom for the last list item */
-.list-group-item:last-child {
-    border-bottom: none;
+.list-group-item:first-child {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top: none;
 }
 
-/* Hover effect */
+
 .list-group-item:hover {
     background-color: rgb(185, 79, 79);
     color: rgb(255, 255, 255);
@@ -97,72 +116,173 @@ body {
     flex-wrap: wrap;
     gap: 20px;
     margin-right: 20px;
-    padding: 20px;
-    border-radius: 10px; /* Add border-radius for a smoother appearance */
+    padding: 05px;
+    border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    height: 100%;
+    margin-left: 260px;
+    margin-top: 50px;
 }
 
-/* initial cards of home page*/
+/*///////////////////////////////////// initial home page*/
 .cardsDiv{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
+    user-select: none;
 }
 
-.scheduledDonorAppointmentsCard{
+.scheduledDonorAppointmentsCard {
+    display: flex ;
+    flex-direction: row;
+    user-select: none;
+}
+
+.scheduledDonorcardInfo{
+    background-color: #F4E1D2;
+}
+
+.scheduledDonorhighlightDiv{
+    background-color: #F4E1D2;
+}
+
+
+
+.pendingDonorAppointmentsCard {
+    display: flex ;
+    flex-direction: row;
+    user-select: none;
+}
+
+.pendingDonorcardInfo{
+    background-color: #D9EAD3;
+}
+
+.pendingDonorhighlightDiv{
+    background-color: #D9EAD3;
+}
+
+
+
+.scheduledUserAppointmentsCard {
+    display: flex ;
+    flex-direction: row;
+    user-select: none;
+}
+.scheduledUsercardInfo{
+    background-color: #D4E6F1;
+}
+
+.scheduledUserhighlightDiv{
+    background-color: #D4E6F1;
+}
+
+
+
+.pendingUserAppointmentsCard {
+    display: flex ;
+    flex-direction: row;
+    user-select: none;
+}
+.pendingUsercardInfo{
+    background-color: #E1D4F4;
+}
+
+.pendingUserhighlightDiv{
+    background-color: #E1D4F4;
+}
+
+
+.cardInfo{
     padding: 20px;
-    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 50px;
-    flex: 1;
+    flex : 1;
+    user-select: none;
+    margin-right: 20px;
 }
 
-.scheduledDonorAppointmentsCard:hover{
+.highlightDiv{
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+    flex : 2;
+    user-select: none;
+    margin-right: 20px;
+}
+
+.highlightDiv th {
+    padding: 10px;
+}
+
+.highlightDiv td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd; 
+}
+
+.highlightDiv tr:hover {
+    cursor: pointer;
+    background-color: #b0aeae;
+}
+
+
+
+.scheduledDonorAppointmentsCard:hover,
+.scheduledUserAppointmentsCard:hover,
+.pendingDonorAppointmentsCard:hover,
+.pendingUserAppointmentsCard:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    background-color: rgb(185, 79, 79);
 }
+
+.scheduledDonorAppointmentsCard:hover {
+    background-color: #D9A69E;
+}
+
+.scheduledUserAppointmentsCard:hover {
+    background-color: #9DC1D8;
+}
+
+.pendingDonorAppointmentsCard:hover {
+    background-color: #B7D2A3;
+}
+
+.pendingUserAppointmentsCard:hover {
+    background-color: #BFA0D9;
+}
+
 
 .cardHeader{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    user-select:none;
 }
 
 .cardBody{
     margin-top: 20px;
 }
 
-.scheduledUserAppointmentsCard{
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 50px;
-    flex : 1;
-}
-.scheduledUserAppointmentsCard:hover{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    background-color: rgb(185, 79, 79);
-}
-/*donor appointments page*/
-/* Style for the appointment div */
 
+
+
+/*///////////////////////////////scheduled donor appointments of today page*/
 
 .scheduledDonorAppointmentsDiv{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
     align-items: center;
     width: 100%;
     flex: 1;
+    user-select: none;
 }
 
 
@@ -177,6 +297,7 @@ body {
     flex-direction: row;
     align-items: center;
     width: 100%;
+    user-select: none;
 }
 
 .appointmentAndAdditionalDiv:hover {
@@ -201,12 +322,10 @@ body {
     align-items: center;
 }
 
-/* Style for the appointment details */
 .appointmentDetails {
     margin-bottom: 10px;
 }
 
-/* Style for the buttons */
 .buttonContainer {
     display: flex;
     justify-content: space-between;
@@ -293,7 +412,10 @@ body {
 
 
 
-/* show donor requests div  */
+
+
+
+/*//////////////////////////////////// show donor requests(pending donor appointments) page  */
 .donorRequestDiv{
     padding: 20px;
     background-color: #ffffff;
@@ -315,36 +437,36 @@ body {
 .tableDiv {
     margin-top: 20px;
     padding: 20px;
-    background-color: #ffffff; /* Change table container background color */
-    border-radius: 10px; /* Add border-radius for a smoother appearance */
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
+    background-color: #ffffff;
+    border-radius: 10px; 
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 
 .donorRequestsTable {
     width: 100%;
-    border-collapse: collapse; /* Collapse border spacing */
+    border-collapse: collapse;
 }
 
-/* Style for table header */
+
 .donorRequestsTable th {
     background-color: #2c6f17;
     color: white;
     padding: 10px;
 }
 
-/* Style for table body */
+
 .donorRequestsTable td {
     padding: 10px;
-    border-bottom: 1px solid #ddd; /* Add border between rows */
+    border-bottom: 1px solid #ddd; 
 }
 
-/* Hover effect for table rows */
+
 .donorRequestsTable tr:hover {
-    background-color: #f0f0f0; /* Change background color on hover */
-    cursor: pointer; /* Change cursor to pointer on hover */
+    background-color: #f0f0f0;
+    cursor: pointer;
 }
-/* Style for donor appointment details */
+
 .detailsDiv {
     background-color: #ffffff;
     padding: 20px;
@@ -362,7 +484,7 @@ body {
     margin-bottom: 15px;
 }
 
-/* Accept button */
+
 .acceptButton {
     background-color: #2c6f17;
     color: white;
@@ -371,14 +493,14 @@ body {
     margin-right: 10px;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s; /* Add transition for smoother hover effect */
+    transition: background-color 0.3s;
 }
 
 .acceptButton:hover {
     background-color: #1a4b0f;
 }
 
-/* Decline button */
+
 .declineButton {
     background-color: #d9534f;
     color: white;
@@ -387,14 +509,14 @@ body {
     margin-right: 10px;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s; /* Add transition for smoother hover effect */
+    transition: background-color 0.3s;
 }
 
 .declineButton:hover {
     background-color: #b52b27;
 }
 
-/* Style for the declining reason div */
+
 .declineReasonDiv {
     background-color: #ffffff;
     padding: 20px;
@@ -403,7 +525,7 @@ body {
     margin-top: 20px;
 }
 
-/* Style for the declining reason input field */
+
 .declineReasonInput {
     width: 100%;
     padding: 10px;
@@ -412,7 +534,7 @@ body {
     border-radius: 5px;
 }
 
-/* Style for the submit button */
+
 .submitButton {
     background-color: #d9534f;
     color: white;
@@ -427,10 +549,10 @@ body {
     background-color: #b52b27;
 }
 
-/* Style for the appointment summary div */
+
 .appointmentSummaryDiv {
     background-color: #ffffff;
-    color: #28a745; /* Green text color */
+    color: #28a745; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -438,4 +560,3 @@ body {
 }
 
 
-/*/////////////////////////////////////////right sidebar///////////////////////////////////////////*/
