--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -93,6 +93,9 @@
            
             
             <div class="container">
+            
+            
+            
                 <div class="reviews">
                     <!-- Larger part content (reviews) -->
                     <div class="card-wrapper">
@@ -149,9 +152,16 @@
                     </div>
                 </div>
                
-                
+               
                     <!-- Second set of cards -->
                 <div class="card-wrapper">
+                    <div class="notification-section">
+                      
+                        <h2>  <i class="las la-envelope"></i> Notifications</h2>
+                        
+                        <p>~Stay updated with real-time alerts</p>
+                    </div>
+                
                     <div class="card">
                         <div class="card-header">
                             <h2 id="bankName">Bank Name</h2>
