--- a/frontendPages/htmlPages/css/bankUPA.css
+++ b/frontendPages/htmlPages/css/bankUPA.css
@@ -1,4 +1,3 @@
-/*whole body*/
 body {
     background-color: #ffffff;
     margin: 0;
@@ -12,8 +11,6 @@ body {
     height: 100vh;
     user-select: none;
 }
-
-/*//////////////////////////////////////////////////////////header//////////////////////////////////////////////////////*/
 
 .header {
     display: flex;
@@ -50,7 +47,7 @@ body {
 }
 .notification-div {
     margin-right: 20px;
-    position: relative; /* Make the parent container relative */
+    position: relative; 
 }
 
 .bell-icon {
@@ -60,8 +57,8 @@ body {
 
 .notification-number {
     position: absolute;
-    top: -5px; /* Adjust this value to position the number vertically */
-    right: -5px; /* Adjust this value to position the number horizontally */
+    top: -5px; 
+    right: -5px; 
     background-color: rgb(172, 20, 20);
     color: white;
     border-radius: 50%;
@@ -82,9 +79,6 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
-
-/*//////////////////////////////////////////////////////main body//////////////////////////////////////////////////////*/
-
 .main-body {
     display: flex;
     position: relative;
@@ -92,7 +86,6 @@ body {
     flex-direction: row;
 }
 
-/*/////////////////////////////////////////sidebar///////////////////////////////////////////*/
 .sidebar {
     margin-right: 10px;
     display: flex;
@@ -110,7 +103,6 @@ body {
 }
 .list-group-item {
     color: rgb(255, 251, 251);
-    /* transition: background-color 0.3s, color 0.3s; */
     font: 1em sans-serif;
     font-size: small;
     cursor: pointer;
@@ -124,41 +116,125 @@ body {
     color: rgb(255, 255, 255);
 
 }
-
-.list-group2 {
+.main-content {
     margin-top: 50px;
-    background-color: #b0aeae;
-    align-items: center;
+    margin-left: 250px;
+    display: flex;
+    flex-direction: row;
 }
+/*//////////////////////////////////////////////////////////start//////////////////////////////////////////////////////*/
 
-.list-group-item2 {
-    padding: 5px 10px; /* Add padding to space out text */
-    color: rgb(255, 251, 251);
-    font: 1em sans-serif;
-    font-size: small;
-    cursor: pointer;
-    border: 1px solid rgb(210, 199, 199);
-    height: 35px;
-    background-color: rgb(106, 23, 23);
-    align-items: center;
+.left-div{
+    flex: 2;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 750px;
+    user-select: none;
 }
-
-.list-group-item2:hover {
-    background-color: rgb(185, 79, 79);
-    color: rgb(255, 255, 255);
-}
-
-
-/*/////////////////////////////////////////main content div///////////////////////////////////////////*/
-.mainContent {
-    flex : 3;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-right: 20px;
-    padding: 05px;
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+.right-div {
+    right:0;
+    margin-right: 60px;
+    margin-top: 100px;
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: #B4B4B8;
+    position: fixed;
     height: 100%;
-    margin-top: 50px;
-    margin-left:260px;
+    width: 30%;
+    user-select: none;
+    border-radius: 10px;
+}
+.left-div-header {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    background-color: bisque;
+    padding: 10px;
+    border-radius: 10px;
+}
+.appointments {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #07ff83;
+}
+
+.appointment{
+    border-top:1px solid #060302;
+    padding: 10px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #f44336;
+}
+
+.appointment-item{
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    background-color: bisque;
+    margin-right: 10px;
+}
+
+.appointment-item-item{
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.appointment-item:nth-child(odd){
+    background-color: #d5c4c3;
+}
+
+.appointment-item:nth-child(even){
+    background-color: bisque;
+}
+
+.appointment:last-child {
+    border-bottom: none;
+}
+
+
+
+
+.upper-div{
+
+}
+
+.picture-div{
+    width: 350px;
+    height: 300px;
+    margin-left: 30px;
+    background-size: cover;
+    background-position: center;
+    border: 2px solid white;
+}
+.details-div{
+    margin-top: 05px;
+    margin-left: 30px;
+}
+
+.document{
+    margin-top: 15px;
+}
+.lower-div{
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+}
+
+.accept-reject-div button{
+    margin-right: 40px;
+}
+
+
+
+.quantity-div{
+    margin-bottom: 20px;
+}
+
+.grant-cancel-button-div button{
+    margin-right: 40px;
 }
