--- a/frontendPages/htmlPages/css/bankHome.css
+++ b/frontendPages/htmlPages/css/bankHome.css
@@ -311,7 +311,14 @@ body {
 
 
 /*///////////////////////////////scheduled donor appointments of today page*/
-
+.SDA-header{
+    background-color: black;
+    color: white;
+    margin-left: 300px;
+    border-radius: 10px;
+    width:500px;
+    padding-left: 25px;
+}
 .scheduledDonorAppointmentsDiv{
     display: flex;
     flex-direction: column;
@@ -324,6 +331,7 @@ body {
     user-select: none;
     background-color: black;
     height: 100%;
+    padding-top: 20px;
 }
 
 
