--- a/frontendPages/htmlPages/css/bankUSA.css
+++ b/frontendPages/htmlPages/css/bankUSA.css
@@ -1,4 +1,3 @@
-/*whole body*/
 body {
     background-color: #ffffff;
     margin: 0;
@@ -12,8 +11,6 @@ body {
     height: 100vh;
     user-select: none;
 }
-
-/*//////////////////////////////////////////////////////////header//////////////////////////////////////////////////////*/
 
 .header {
     display: flex;
@@ -50,7 +47,7 @@ body {
 }
 .notification-div {
     margin-right: 20px;
-    position: relative; /* Make the parent container relative */
+    position: relative; 
 }
 
 .bell-icon {
@@ -60,8 +57,8 @@ body {
 
 .notification-number {
     position: absolute;
-    top: -5px; /* Adjust this value to position the number vertically */
-    right: -5px; /* Adjust this value to position the number horizontally */
+    top: -5px; 
+    right: -5px; 
     background-color: rgb(172, 20, 20);
     color: white;
     border-radius: 50%;
@@ -82,9 +79,6 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
-
-/*//////////////////////////////////////////////////////main body//////////////////////////////////////////////////////*/
-
 .main-body {
     display: flex;
     position: relative;
@@ -92,7 +86,6 @@ body {
     flex-direction: row;
 }
 
-/*/////////////////////////////////////////sidebar///////////////////////////////////////////*/
 .sidebar {
     margin-right: 10px;
     display: flex;
@@ -110,7 +103,6 @@ body {
 }
 .list-group-item {
     color: rgb(255, 251, 251);
-    /* transition: background-color 0.3s, color 0.3s; */
     font: 1em sans-serif;
     font-size: small;
     cursor: pointer;
@@ -124,40 +116,10 @@ body {
     color: rgb(255, 255, 255);
 
 }
-
-.list-group2 {
+.main-content {
     margin-top: 50px;
-    background-color: #b0aeae;
-    align-items: center;
+    margin-left: 250px;
+    display: flex;
+    flex-direction: row;
 }
-
-.list-group-item2 {
-    padding: 5px 10px; /* Add padding to space out text */
-    color: rgb(255, 251, 251);
-    font: 1em sans-serif;
-    font-size: small;
-    cursor: pointer;
-    border: 1px solid rgb(210, 199, 199);
-    height: 35px;
-    background-color: rgb(106, 23, 23);
-    align-items: center;
-}
-
-.list-group-item2:hover {
-    background-color: rgb(185, 79, 79);
-    color: rgb(255, 255, 255);
-}
-
-/*/////////////////////////////////////////main content div///////////////////////////////////////////*/
-.mainContent {
-    flex : 3;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-right: 20px;
-    padding: 05px;
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    height: 100%;
-    margin-top: 50px;
-    margin-left:260px;
-}
+/*//////////////////////////////////////////////////////////start//////////////////////////////////////////////////////*/
